refactor: backend persistence 구조 수렴 (#279)
BACKEND-REFACTOR-003

JPA 중심 persistence 구조 수렴과 CodeRabbit/독립 검토 correction을 반영합니다.

- Payment/Checkout lock·conditional mutation semantics 보존
- Catalog admin persistence 분해 및 concurrency/N+1 correction
- Review summary atomic upsert 및 회귀 테스트
- Product query authoritative path 수렴
- UTC 시간 계약 및 typed projection 정리

HTTP/REST, schema, frontend, production 운영은 변경하지 않습니다.